force-app/trigger-framework/objects/SObjectTriggerSetting__mdt/SObjectTriggerSetting__mdt.object-meta.xml
<CustomObject>
    <description>Trigger-level setting for managing trigger logic for an SObject</description>
    <label>SObject Trigger Setting</label>
    <pluralLabel>SObject Trigger Settings</pluralLabel>
</CustomObject>