force-app/trigger-framework/objects/SObjectTriggerSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not triggers are active for the SObject.</description>
    <inlineHelpText>Whether or not triggers are active for the SObject.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>