force-app/trigger-framework/objects/SObjectTriggerSetting__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description
  >Priority of execution, with lower numbers being executed first. SObject Settings with no priority will be executed last. Useful for package-based development.</description>
    <inlineHelpText
  >Priority of execution, with lower numbers being executed first. SObject Settings with no priority will be executed last. Useful for package-based development.</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>