force-app/trigger-framework/objects/SObjectTriggerSetting__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>The type of SObject (e.g. Account) that this setting is for.</description>
    <inlineHelpText>The type of SObject (e.g. Account) that this setting is for.</inlineHelpText>
    <label>SObject Type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>